# md-to-openwebui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: windows-exe.yml
scripts/: build_exe.ps1  launcher.py  version_info.txt
src/md_to_openwebui/: __init__.py  __main__.py  converter.py  parser.py  web.py
src/md_to_openwebui/static/: app.js  index.html  styles.css
tests/: test_converter.py  test_parser.py  test_web.py
